--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^2.1.3",
+    "@auth0/auth0-vue": "^2.3.3",
     "@mdi/font": "^7.4.47",
     "@pinia/nuxt": "^0.5.1",
+    "auth0-js": "^9.26.1",
     "moment": "^2.30.1",
     "nuxt": "^3.12.3",
     "pinia": "^2.1.7",
