--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "clean:nuxt": "npx nuxi cleanup .nuxt",
+    "clean:cache": "npx nuxi cleanup node_modules/.cache",
+    "lint:js": "eslint --ext \".ts,.vue\" --ignore-path .gitignore .",
+    "lint:prettier": "prettier --check .",
+    "lint": "yarn lint:js && yarn lint:prettier"
   },
   "dependencies": {
-    "@auth0/auth0-spa-js": "^2.1.3",
     "@auth0/auth0-vue": "^2.3.3",
     "@mdi/font": "^7.4.47",
     "@pinia/nuxt": "^0.5.1",
